fixed video player on mobile

--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -560,6 +560,7 @@ footer {
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
+  #player-container{margin-top: 0;}
 
   .selec-video-info {
     text-align: center;
